[tool.poetry]
name = "speckle_automate-mesh_density_checker"
version = "0.1.0"
description = "Examine model health by identifying areas of high mesh density as possible perfomance issues."
authors = ["Jonathon Broughton <jonathon@speckle.systems>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
specklepy = "^2.19.5"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
reportlab = "^4.0.6"
mypy = "^1.11.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.271"
pytest = "^7.4.2"
python-dotenv = "^1.0.0"
pydantic = "^2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "UP", # pyupgrade
  "D",  # pydocstyle
  "I",  # isort
]

[tool.ruff.pydocstyle]
convention = "google"
