[tool.poetry]
name = "speckle_automate-mesh_density_checker"
version = "0.1.0"
description = "Examine model health by identifying areas of high mesh density as possible perfomance issues."
authors = ["Jonathon Broughton <jonathon@speckle.systems>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.1"
seaborn = "^0.13.0"
reportlab = "^4.2.2"
mypy = "^1.11.1"
pydantic = "^2.8.2"
specklepy = "^2.19.5"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.0.271"
pytest = "^7.4.4"
python-dotenv = "^1.0.1"
vulture = "^2.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "UP", # pyupgrade
  "D",  # pydocstyle
  "I",  # isort
]

[tool.ruff.pydocstyle]
convention = "google"
